--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Trying Javascript with Node Js\r I'll create a Notes App using Node Js and MongoDB",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon .\\src\\index.js"
+    "dev": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
